Fixed z-index problem + Lightbox captions

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -24,6 +24,7 @@ Notes:
 .slideshow {
 	display: block;
 	position: relative;
+	z-index: 0;
 }
 .slideshow-images {
 	display: block;
